add db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=codechella
+
+spring.r2dbc.url=r2dbc:postgres://localhost:5432/sampledb
+spring.r2dbc.username=${DB_USERNAME}
+spring.r2dbc.password=${DB_PASSWORD}
