--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=codechella
 
-spring.r2dbc.url=r2dbc:postgres://localhost:5432/sampledb
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/sampledb
 spring.r2dbc.username=${DB_USERNAME}
 spring.r2dbc.password=${DB_PASSWORD}
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/sampledb
+spring.flyway.user=${DB_USERNAME}
+spring.flyway.password=${DB_PASSWORD}
+spring.flyway.driver-class-name=org.postgresql.Driver
